Bug 499459 - Scheduled transactions: problems with "Change the date to the next processing day"
Summary: Scheduled transactions: problems with "Change the date to the next processing...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-03 12:44 UTC by Paul Worrall
Modified: 2025-02-05 13:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2025-02-03 12:44:24 UTC
SUMMARY
When scheduled transactions fall on a non-processing day, and have "If this schedule occurs on a non-processing day:" set to "Change the date to the next processing day", their date is correctly adjusted in the greyed-out preview shown in the ledger, but:
1. If "Enter this schedule into the register automatically" is selected, the transaction is entered on the scheduled (non-processing) day
2. For schdules that aren't entered automatically, when choosing "Enter next transaction" the date is not adjusted in the dialog.

STEPS TO REPRODUCE
1. Have a scheduled transaction that falls on a non-processing day (e.g. Sunday, for me it was Sat 1st and Sun 2nd Feb) but is not configured to enter automatically
2. Have "Number of days to preview schedules" set sufficiently high to show the above scheduled transaction
3. In the ledger view, right-click => Enter next transaction

OBSERVED RESULT
The greyed-out preview of the transaction in the ledger, before step 3 is correctly adjusted to the next processing day
The date in the dialog that appears in step 3 is not adjusted
And for schedules that are entered automatically, the date is not adjusted

EXPECTED RESULT
The date should be adjusted in the dialog, and in automatically entered transactions

SOFTWARE/OS VERSIONS
KMyMoney: kmymoney-master-4071-linux-gcc-x86_64.AppImage

KDE Plasma Version: 6.2.91
KDE Frameworks Version: 6.10.0
Qt Version: 6.9.0
Graphics Platform: Wayland
Comment 1 Thomas Baumgart 2025-02-05 13:40:39 UTC
Git commit 3777617dc12af296b0ac0b9515efc4a011934de1 by Thomas Baumgart.
Committed on 05/02/2025 at 13:40.
Pushed by tbaumgart into branch 'master'.

Differentiate between edit and enter scheduled transaction

When the due date of a scheduled transaction falls on a banking holiday,
the due date in the schedule view is probably adjusted to the next or
previous processing day based on the selected option of the schedule.

When the schedule is about to be entered the option is ignored and the
original next due date is used to. The user would have to change the
date manually. This change uses the adjusted date when the transaction
editor is used during entry of the scheduled transaction to solve the
problem.
FIXED-IN: 5.2

M  +1    -1    kmymoney/views/keditscheduledlg.cpp
M  +2    -2    kmymoney/views/kenterscheduledlg.cpp
M  +6    -2    kmymoney/views/newtransactioneditor.cpp
M  +6    -1    kmymoney/views/newtransactioneditor.h

https://invent.kde.org/office/kmymoney/-/commit/3777617dc12af296b0ac0b9515efc4a011934de1